data/derived/fa15/progs/unify/prog1394.ml.out
Characters 173-177:
  | Sine expr                          -> sin pi*.eval expr
                                                       ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
